adding course_tag assosiative table
